--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <version>1.18.12</version>
 <!--            <scope>provided</scope>-->
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
